@startuml

title __CONTROLLER's Class Diagram__\n

  namespace ub.edu.controller {
    class ub.edu.controller.Controller {
        {static} - uniqueIstance : Controller
        + getControllerGrups()
        + getControllerPuntDePas()
        + getControllerRuta()
        + getControllerUsuari()
        {static} + getInstance()
        - Controller()
    }
  }
  

  namespace ub.edu.controller {
    class ub.edu.controller.ControllerGrups {
        + ControllerGrups()
        + actualitzarRankingGrup()
        + actualitzarRankings()
        + addMembreGrup()
        + crearGrup()
        + getGrups()
        + getRankingGrup()
        + marxarGrup()
    }
  }
  

  namespace ub.edu.controller {
    class ub.edu.controller.ControllerPuntDePas {
        + ControllerPuntDePas()
        + afegirPuntDeControl()
        + llistarPuntsDePasRutaActual()
        + removePuntDeControl()
        + valorarPuntDePasTrackActual()
    }
  }
  

  namespace ub.edu.controller {
    class ub.edu.controller.ControllerRuta {
        + ControllerRuta()
        + acabarRuta()
        + acabarTrackRutaActual()
        + afegirComarca()
        + afegirLocalitat()
        + afegirRuta()
        + afegirTransport()
        + cercaRutesPerComarca()
        + cercaRutesPerLocalitat()
        + cercaRutesPerTransport()
        + cercarRutesPerTempsDeDurada()
        + iniciarRuta()
        + iniciarTrackRutaActual()
        + llistarCatalegRutesPerDurada()
        + llistarCatalegRutesPerNom()
    }
  }
  

  namespace ub.edu.controller {
    class ub.edu.controller.ControllerUsuari {
        + ControllerUsuari()
        + addPuntsToPersona()
        + findPersona()
        + loguejarPersona()
        + recuperarContrassenya()
        + setUsuariActual()
        + validatePassword()
        + validateRegistrePersona()
        + validateUsername()
    }
  }
  

  namespace ub.edu.controller {
    class ub.edu.controller.GeneralDataController {
        - nomUsuariActual : String
        {static} - uniqueInstance : GeneralDataController
        {static} + getInstance()
        + nomPersona()
        + setNomUsuariActual()
        + tripUB()
        - GeneralDataController()
    }
  }
  

  ub.edu.controller.Controller o-- ub.edu.controller.ControllerGrups : controllerGrups
  ub.edu.controller.Controller o-- ub.edu.controller.ControllerPuntDePas : controllerPuntDePas
  ub.edu.controller.Controller o-- ub.edu.controller.ControllerRuta : controllerRuta
  ub.edu.controller.Controller o-- ub.edu.controller.ControllerUsuari : controllerUsuari
  ub.edu.controller.ControllerGrups o-- ub.edu.controller.GeneralDataController : data
  ub.edu.controller.ControllerPuntDePas o-- ub.edu.controller.GeneralDataController : data
  ub.edu.controller.ControllerRuta o-- ub.edu.controller.GeneralDataController : data
  ub.edu.controller.ControllerUsuari o-- ub.edu.controller.GeneralDataController : data
  ub.edu.controller.GeneralDataController o-- ub.edu.model.TripUB : tripUB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
